# uni

./: README.md
Sistemi operativi/: FilosofiACena.c
basi/: riassunto.html  riassunto_completo.md
basi/lab/lab01/: esercizi.sql  libri.sql  sample.sql  servizi.sql
basi/lab/lab02/: esercizi.sql  persone.sql  setup.sql
basi/lab/lab03/: esercizi.sql
basi/lab/lab_2023/: Untitled.sql  esercizio.sql
basi/progetto/: .gitignore  README.md  clear_build.sh  readme.txt
basi/progetto/db/: database.sql  init.sql
basi/progetto/src/: CMakeLists.txt  main.c  queries.h
basi/riassunti_md/: 01 - Introduzione al Corso.md  02 - Il modello relazionale.md  03 - Esercizi Capitolo 2.md  04 - Algebra Relazionale.md  05 - Esercizi Algebra Relazionale.md  06 - Esercitazione Algebra Relazionale.md  07 - Concetti di Base di SQL.md  08 - Concetti Avanzati di SQL.md  09 - Progettazione Concettuale.md  10 - Esercizi Progettazione Concettuale.md  11 - Progettazione Logica.md  12 - Normalizzazione.md  13 - Esercizi Normalizzazione.md  14 - Esercitazione Laboratorio.md  15 - Creazione e Gestione degli Indici.md  16 - Gestione delle Transazioni.md  17 - Esercitazione Gestione delle Transazioni.md  18 - Conclusioni del Corso.md
cybersecurity/: dispensa.py  test_dispensa.py
programmazione/c/: campo_ricorsivo_no_sol.c  campo_ricorsivo_sol.c  data_science.c  liste.c  parking_lot.c  printing_pattern_loop.c  prova.c  shelf.c  triangolo_magico.c  varie.c
programmazione/c/alberi/: alberi.c  alberi.h  cancellazione_nodo.c
programmazione/c/array/: array.c  array.h
programmazione/c/liste/: liste.c  liste.h
programmazione/c/matrici/: matrici.c  matrici.h
programmazione/c/stringhe/: esercizio_chars.c  stringhe.c  (+1 more)
sistemi_operativi/bash/: array_to_zero.sh  num_compreso.sh  num_compreso_while.sh  sommaquadrati.sh  tic_tac_toe.sh
sistemi_operativi/threads/: filosofi_a_cena.c  memoria_figli.c  moltiplica_matrici.c
(+52 files in other folders)
